--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+data_base:
+    resource: "@DataBaseBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 front:
     resource: "@FrontBundle/Controller/"
     type:     annotation
