--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -8,11 +8,26 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: en
+    locale: fr
+    mailer_user: la-toile-verte@gmail.com
+    mailer_user_name: La Toile Verte
+
+fos_user:
+    db_driver: orm # other valid values are 'mongodb' and 'couchdb'
+    firewall_name: main
+    user_class: DataBaseBundle\Entity\User
+    from_email:
+        address: "%mailer_user%"
+        sender_name: "%mailer_user_name%"
+    registration:
+        form:
+            type: DataBaseBundle\Form\RegistrationType
+#        confirmation:
+ #           enabled: true
 
 framework:
     #esi: ~
-    #translator: { fallbacks: ['%locale%'] }
+    translator: { fallbacks: ['%locale%'] }
     secret: '%secret%'
     router:
         resource: '%kernel.project_dir%/app/config/routing.yml'
