Génération d'un fichier différent par utilisateur TODO détruire le fichier à la fin du quiz

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -37,3 +37,7 @@ services:
     # AppBundle\Service\ExampleService:
     #     arguments:
     #         $someArgument: 'some_value'
+    app.twig.delete:
+        class: FrontBundle\Twig\TwigExtension
+        tags:
+            - { name: twig.extension }
